--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -4,7 +4,7 @@ db = "odoo-tecnored-drogueriablv-main-7701393"
 username = "ahidalgo.blv@gmail.com"
 password = "ahidalgo123"
 
-[odoo_bd2]]
+[odoo_bd2]
 url = "https://crlv.odoo.com"
 db = "crlvnew-main-26213407"
 username = "ahidalgo.blv@gmail.com"
